[fix] update to ghc 94 - fix the compile errors - fix the test failures - add github workflows to verify it keeps working - add nix env - prepare flake update such that we can update easily in the future - reformat with stylish-haskell as good as possible

--- a/hie.yaml
+++ b/hie.yaml
@@ -1,2 +1,7 @@
 cradle:
-  stack: {}
+  cabal:
+    - path: "src"
+      component: "lib:transitive-anns"
+
+    - path: "test"
+      component: "transitive-anns:test:test"
