[chore] compatibility with ghc ghc 9.6

--- a/.github/workflows/test-flake.yml
+++ b/.github/workflows/test-flake.yml
@@ -8,9 +8,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: cachix/install-nix-action@v22
+    - uses: cachix/install-nix-action@v27
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
     - run: nix flake check -Lv --allow-import-from-derivation --fallback --accept-flake-config
     - run: nix build .#transitive-anns -Lv --fallback --accept-flake-config
+    - run: nix build .#ghc94-transitive-anns -Lv --fallback --accept-flake-config
     - run: nix build .#ghc92-transitive-anns -Lv --fallback --accept-flake-config
